2011-10-10  Dominique Dumont  <domi.dumont@free.fr> 1.329

	* ListEditor: signal TKUI that data needs to be saved when list is
	modified
        * LeafEditor: do not clear entry when input is wrong. This is
	annoying
        * TkUI: updated license wording to keep Debian lintian happy

2011-09-23  Dominique Dumont  <domi.dumont@free.fr> 1.328

	* ListEditor: enable apply_fix button
	* TkUI: Restrict cut buffer paste to tree widget

2011-09-16  Dominique Dumont  <domi.dumont@free.fr> 1.327

    * TkUI.pm:
      * Fixed bug where force display did not work with hash
        keys containing non alphanumeric of space
      * Changed logger class to TkUI (instead of
        Config::Model::TkUI)

2011-09-02  Dominique Dumont  <domi.dumont@free.fr> 1.326

    * added check warning button in list viewer and editor

2011-05-17  Dominique Dumont  <domi.dumont@free.fr> 1.325

    * TkUI.pm: disable double-click because it trigger
      editor when double clicking outside of Hlist
    * NodeEditor.pm: respect order of element when
      completing the pane widget after warp

2011-05-17  Dominique Dumont  <domi.dumont@free.fr> 1.324

   * Depends on Config::Model 1.244
   * TkUI: added search widget (menu "Edit -> Search" or
     just hit <Ctrl-F>)
   * ListEditor: fix bug that prevented to push a null value

2011-04-11  Dominique Dumont  <domi.dumont@free.fr> 1.323

    * LeafEditor: show value help widget only when useful
    * TkUI: added help menu entry to show the config class man page.
    * AnyViewer: use Tk::Text::Pod to display on-line help
    * Paste on List items will push content of cut buffer into the list
    * ListEditor: reworked layout for better usability, added sort button
    * HashEditor: reworked layout for better usability

2011-03-04  Dominique Dumont  <domi.dumont@free.fr> 1.322

        * Changed nb of skipped tests (fix test plan issues
         when Tk cannot be run)

2011-03-01  Dominique Dumont  <domi.dumont@free.fr> 1.321
